# csci5552-ser-hws

./: .gitignore  CMakeLists.txt  README.md  clang-format.cmake
src/: CMakeLists.txt
src/homework/: CMakeLists.txt
src/homework/hw0/: CMakeLists.txt  hw0.cpp  hw0.h  hw0_soln.cpp  hw0_test.cpp
src/homework/hw1/: CMakeLists.txt  hw1.cpp  hw1.h  hw1_soln.cpp  hw1_test.cpp
src/homework/hw2/: CMakeLists.txt  hw2.cpp  hw2.h  hw2_soln.cpp  hw2_test.cpp
src/robot_simulation/: CMakeLists.txt  line_segment.cpp  line_segment.h  simulator.cpp  simulator.h  test_simulator.cpp
src/visualization/: CMakeLists.txt  gnuplot_i.cpp  gnuplot_i.h  gvis.cpp  gvis.h  plot.py  vis.cpp  vis.h
src/visualization/opengl/: CMakeLists.txt  glvis.cpp  glvis.h  opengl_util.cpp  opengl_utils.h
src/visualization/opengl/shaders/: fragShader.glsl  vertShader.glsl
theory/hw1/: hw1.tex
